# pybind11-notes

./: .editorconfig  .gitignore  README.md
00_install_pybind11/: README.md
01_quickstarts/: README.md
01_quickstarts/cpp_call_python/: .gitignore  CMakeLists.txt  README.md
01_quickstarts/cpp_call_python/src/: main.cpp
01_quickstarts/python_call_cpp/: CMakeLists.txt  README.md  clean.sh
cpp-call-python/: CMakeLists.txt  README.md
python-call-cpp/: CMakeLists.txt  README.md  add.py
